tests/baselines/reference/extendGlobalThis2.errors.txt
extendGlobalThis2.ts(1,11): error TS2397: Declaration name conflicts with built-in global identifier 'globalThis'.


==== extendGlobalThis2.ts (1 errors) ====
    namespace globalThis {
              ~~~~~~~~~~
!!! error TS2397: Declaration name conflicts with built-in global identifier 'globalThis'.
        export function foo() { console.log("x"); }
    }
    